3sem/IFJ/IFJ-Project/tests/syntax_errors/test_syntax_leading_plus.wren
import "ifj25" for Ifj

// SYNTAX ERROR: Missing left operand
// Expected error: SYNTAX_ERROR (2)

class Program {
	static main() {
		var x
		x = + 5
	}
}

